# ethers-gd

./: LICENSE  README.md
ethers-gd/: Main.tscn  project.godot
ethers-gd/.import/: ethers_logo.png-8cca809b90820de211d653381e7f794f.md5  ethers_logo.png-8cca809b90820de211d653381e7f794f.stex  frame_logo.png-517a7c6e396975593be81730f1f2be0d.md5  frame_logo.png-517a7c6e396975593be81730f1f2be0d.stex  frame_logo.png-fd5e41f1bb430ff9de4f0402ed220933.stex
ethers-gd/UI/: ConnectFrame.gd  ConnectFrame.tscn
ethers-gd/addons/ethers-gd/: ethers.gd  ethers.gdnlib  plugin.cfg
ethers-gd/addons/ethers-gd/classes/: async_executor_driver.gdns  frame_provider.gdns  json_rpc_provider.gdns
ethers-gd/addons/ethers-gd/logos/: ethers_logo.png.import  frame_logo.png.import
gdnative/: Cargo.toml
gdnative/src/: ethers_provider.rs  frame_provider.rs  lib.rs  remote_signer.rs
