[package]
name = "ethers-gd"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { version = "0.10", features = ["async"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false }

[lib]
crate-type = ["cdylib"]